# if_fun

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
docs/: architecture-overview.html
docs/superpowers/plans/: 2026-04-16-if-fun-phase-a-walking-skeleton.md
docs/superpowers/specs/: 2026-04-16-if-fun-design.md
if_fun/: cli.py  ids.py
if_fun/agents/: map_verifier.py  solvability_checker.py
if_fun/parser/: __init__.py  grammar.py  parser.py
if_fun/save/: paths.py  save_format.py
if_fun/save/schema_migrations/: __init__.py
if_fun/tui/: app.py  turn_engine.py
if_fun/world/: effects.py  events.py  guards.py  items.py  player.py  rooms.py  state.py  store.py  transitions.py
if_fun/worlds/: five_room.py
tests/: test_cli.py  test_ids.py  test_smoke.py
tests/agents/: test_map_verifier.py  test_solvability_checker.py
tests/architecture/: test_package_boundaries.py
tests/e2e/: test_smoke_five_room.py
tests/parser/: __init__.py  test_grammar.py  test_parser.py
tests/save/: test_save_format.py
tests/tui/: test_app.py  test_turn_engine.py
tests/world/: test_classify_direction.py  test_effects.py  test_events.py  test_guards.py  test_item_def.py  test_player.py  test_rooms.py  test_state.py  test_store.py  test_transitions.py
tests/worlds/: test_five_room.py
